# realtime-asr

./: CMakeLists.txt  CMakeLists.txt-triton-grpc  README.md
build-api/: CMakeCache.txt  Makefile  mk.sh  rt-client.py  wsclient
build-master-demo/: Makefile  cmake_install.cmake  finalcpp.pcm  log  mk.sh  pcmtowav.sh  run.sh  watch.sh
http/: httpaudio.cc  httpaudio.h  httplib.h
includes/: timer.h  utils.h  wav.h
segment/: segment.cc  segment.h
vad/: pl-pcm.sh
vad/src/: common.h  file_cut.c  file_cut.h  main.c  period_format.c  period_format.h  simple_vad.h
websocket/: websocket_client.cc  websocket_client.h  websocket_server.cc  websocket_server.h
